--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint",
-        "lint:fix": "next lint --fix",
-        "lint:strict": "eslint . --ext .js,.jsx,.ts,.tsx",
-        "lint:strict:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-        "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
-        "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\""
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md,mjs}\"",
+        "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md,mjs}\"",
+        "check": "npm run format:check && npm run lint"
     },
     "dependencies": {
         "clsx": "^2.1.1",
