--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
         "clsx": "^2.1.1",
         "framer-motion": "^12.23.24",
         "lucide-react": "^0.554.0",
-        "next": "16.0.3",
-        "react": "19.2.0",
-        "react-dom": "19.2.0",
+        "matter-js": "^0.20.0",
+        "next": "^16.0.8",
+        "react": "^19.2.1",
+        "react-dom": "^19.2.1",
         "tailwind-merge": "^3.4.0"
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4",
+        "@types/matter-js": "^0.20.2",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
