--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "clsx": "^2.1.1",
         "framer-motion": "^12.23.24",
+        "lenis": "^1.3.15",
         "lucide-react": "^0.554.0",
         "matter-js": "^0.20.0",
         "next": "^16.0.8",
